--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "bootstrap": "^5.3.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-image-lightbox": "^5.1.4",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "scripts": {
     "start": "react-scripts start",
